Fix image in special card overflow

--- a/style.css
+++ b/style.css
@@ -101,4 +101,9 @@ ul {
     border-width: 6px;
     border-color: #626262;
     border-radius: 15px;
+    overflow: hidden;
+}
+
+.info-section .special img {
+    
 }
